# cmake-sandbox

./: .gitignore  CMakeLists.txt  ProjectA.cpp  ProjectA.h.in  README.md
TestLib/: CMakeLists.txt  test.cpp  test.h
